--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       <input id="search-input" type="text" aria-label="Search mods" placeholder="Search mods..." class="flex-1 min-w-[150px] px-2 py-1 text-sm rounded bg-gray-800 text-white border border-gray-700 focus:outline-none focus:ring-2 focus:ring-yellow-500" />
     </div>
 
-    <div id="mod-list" class="grid gap-4" style="grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));"></div>
+    <div id="mod-list" class="grid gap-4" style="grid-template-columns: repeat(auto-fit, minmax(max(250px, 100%/5), 1fr));"></div>
 
     <footer class="mt-8 text-center text-sm text-gray-500">
       Cheeki's Mods Archive - <a href="https://linktr.ee/cheekibreekii" target="_blank" class="text-blue-400 hover:underline">Check me Out!</a>
@@ -196,9 +196,9 @@
             </div>
           </div>
           
-          <div class="text-xs text-white mb-2" style="display: flex; white-space: nowrap; overflow: hidden; align-items: baseline; gap: 0.5rem;">
-            <span class="leading-tight" style="flex-shrink: 0;">Platform:</span>
-            <span style="overflow: hidden; text-overflow: ellipsis; min-width: 0; flex: 1;">${platformHTML}</span>
+          <div class="text-xs text-white mb-2" style="display: flex; align-items: baseline; gap: 0.5rem; min-width: 0;">
+            <span class="leading-tight" style="flex-shrink: 0; width: 55px;">Platform:</span>
+            <span style="overflow: hidden; text-overflow: ellipsis; white-space: nowrap; min-width: 0; flex: 1;">${platformHTML}</span>
           </div>
           
           <p class="text-gray-400 text-sm">${mod.description}</p>
