Bigger rating numbers

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
         rating.className = 'flex items-center space-x-1 text-yellow-400 rating';
         
         const ratingNumber = document.createElement('span');
-        ratingNumber.className = 'text-sm font-medium';
+        ratingNumber.className = 'text-base font-medium';
         ratingNumber.textContent = mod.rating.toFixed(1);
         rating.appendChild(ratingNumber);
         
