--- a/guides/mod03-goldsphere.html
+++ b/guides/mod03-goldsphere.html
@@ -40,7 +40,7 @@
     <ul class="list-disc list-inside text-gray-300 mb-4">
       <li>jek@n</li>
       <li>charsi</li>
-      <li>I am dead</li>
+      <li>I am dead (OGSR Port)</li>
     </ul>
 
     <h3 class="font-semibold text-gray-200 mb-1">Translation</h3>
@@ -71,6 +71,7 @@
   </div>
 </body>
 </html>
+
 
 
 
