--- a/index.html
+++ b/index.html
@@ -163,11 +163,9 @@
         ratingNumber.textContent = mod.rating.toFixed(1); // Show one decimal place
         rating.appendChild(ratingNumber);
         
-        // Stars container - holds the 5 star icons
-        // STAR COLOR CONTROL: Change opacity-90 to adjust star brightness
-        // opacity-100 = full brightness, opacity-90 = 90% brightness, opacity-80 = 80% brightness, etc.
+        // STAR CONTROL
         const starsContainer = document.createElement('div');
-        starsContainer.className = 'flex items-center space-x-0.5 opacity-90';
+        starsContainer.className = 'flex items-center space-x-0.5 opacity-95';
         starsContainer.innerHTML = renderStars(mod.rating); // Generate star HTML
         rating.appendChild(starsContainer);
 
