--- a/guides/mod04-incubator.html
+++ b/guides/mod04-incubator.html
@@ -23,10 +23,16 @@
 
     <!-- Links Section -->
     <h2 class="text-xl font-semibold mb-2">Links</h2>
+
+    
     <p class="text-gray-300 mb-1">
       Official Page: 
       <a href="https://vk.com/vivient_team_mods" target="_blank" class="text-blue-400 hover:underline">Vivient Team</a>
+      <a href="https://discord.com/invite/UpxKJ3PyZ3" target="_blank" class="text-blue-400 hover:underline">Discord</a>
     </p>
+
+
+    
     <p class="text-gray-300 mb-1">
       Ap-pro Original Page: 
       <a href="https://ap-pro.ru/stuff/zov_pripjati/inkubator-r379/" target="_blank" class="text-blue-400 hover:underline">Инкубатор</a>
@@ -74,3 +80,4 @@
   </div>
 </body>
 </html>
+
