--- a/guides/mod04-incubator.html
+++ b/guides/mod04-incubator.html
@@ -27,8 +27,8 @@
     
     <p class="text-gray-300 mb-1">
       Official Page: 
-      <a href="https://vk.com/vivient_team_mods" target="_blank" class="text-blue-400 hover:underline">Vivient Team</a>
-      <a href="https://discord.com/invite/UpxKJ3PyZ3" target="_blank" class="text-blue-400 hover:underline">Discord</a>
+      <a href="https://vk.com/vivient_team_mods" target="_blank" class="text-blue-400 hover:underline">-Vivient Team</a>
+      <a href="https://discord.com/invite/UpxKJ3PyZ3" target="_blank" class="text-blue-400 hover:underline"> -Discord</a>
     </p>
 
 
@@ -80,4 +80,5 @@
   </div>
 </body>
 </html>
+
 
