--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     }
     .mod-card:hover {
       transform: scale(1.01);
-      box-shadow: 0 0 0 1px rgba(255, 255, 255, 0.5), 0 4px 12px rgba(0, 0, 0, 0.2);
+      box-shadow: 0 4px 20px rgba(255, 255, 255, 0.15);
     }
   </style>
 </head>
