--- a/index.html
+++ b/index.html
@@ -77,6 +77,19 @@
       width: 100%;
       aspect-ratio: 16/9;
       border-radius: 0.375rem;
+      border: 1px solid #000;
+    }
+    .video-thumbnail {
+      border: 1px solid #000;
+    }
+    .skeleton-loading {
+      background: linear-gradient(90deg, #374151 25%, #4b5563 50%, #374151 75%);
+      background-size: 200% 100%;
+      animation: loading 1.5s infinite;
+    }
+    @keyframes loading {
+      0% { background-position: 200% 0; }
+      100% { background-position: -200% 0; }
     }
   </style>
 </head>
@@ -170,9 +183,22 @@
       img.alt = 'Video thumbnail';
       img.loading = 'lazy';
 
+      // Add skeleton loading effect while image loads
+      const skeletonDiv = document.createElement('div');
+      skeletonDiv.className = 'skeleton-loading w-full h-full absolute inset-0 rounded';
+      
+      img.addEventListener('load', () => {
+        skeletonDiv.remove();
+      });
+      
+      img.addEventListener('error', () => {
+        skeletonDiv.remove();
+      });
+
       const playButton = document.createElement('div');
       playButton.className = 'play-button';
 
+      thumbnail.appendChild(skeletonDiv);
       thumbnail.appendChild(img);
       thumbnail.appendChild(playButton);
       container.appendChild(thumbnail);
@@ -328,7 +354,7 @@
         desc.textContent = mod.description;
 
         const links = document.createElement('div');
-        links.className = 'mb-2';
+        links.className = 'mb-4';
         (mod.links || []).forEach(link => {
           const a = document.createElement('a');
           a.href = link.url;
