--- a/index.html
+++ b/index.html
@@ -77,10 +77,10 @@
       width: 100%;
       aspect-ratio: 16/9;
       border-radius: 0.375rem;
-      border: 1px solid #000;
+      box-shadow: 0 0 8px rgba(0, 0, 0, 0.3);
     }
     .video-thumbnail {
-      border: 1px solid #000;
+      box-shadow: 0 0 8px rgba(0, 0, 0, 0.3);
     }
     .skeleton-loading {
       background: linear-gradient(90deg, #374151 25%, #4b5563 50%, #374151 75%);
