--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
       transition: transform 0.2s ease-in-out, box-shadow 0.2s ease-in-out, background-color 0.2s ease-in-out;
     }
     .mod-card:hover {
-      transform: scale(1.01);
+      /* HOVER ZOOM DISABLED: To re-enable the zoom effect, uncomment the line below */
+      /* transform: scale(1.01); */
       box-shadow: 0 8px 25px rgba(0, 0, 0, 0.15);
       background-color: rgba(55, 65, 81, 0.5);
     }
