--- a/index.html
+++ b/index.html
@@ -3,7 +3,36 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Cheeki's Mods Archive</title>
+  <title>Cheeki's Mods Archive - S.T.A.L.K.E.R. Story Mods Collection</title>
+  
+  <!-- SEO Meta Tags -->
+  <meta name="description" content="Archive of S.T.A.L.K.E.R. story mods reviewed by Cheeki. Download links, ratings, and install guides for Shadow of Chernobyl, Clear Sky, and Call of Pripyat modifications.">
+  <meta name="keywords" content="STALKER mods, S.T.A.L.K.E.R. modifications, game mods, Shadow of Chernobyl, Clear Sky, Call of Pripyat, story mods">
+  <meta name="author" content="Cheeki">
+  
+  <!-- Open Graph -->
+  <meta property="og:title" content="Cheeki's Mods Archive - S.T.A.L.K.E.R. Story Mods">
+  <meta property="og:description" content="Archive of S.T.A.L.K.E.R. story mods with reviews, ratings, and download links">
+  <meta property="og:type" content="website">
+  
+  <!-- Structured Data -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebSite",
+    "name": "Cheeki's Mods Archive",
+    "description": "Archive of S.T.A.L.K.E.R. story mods reviewed by Cheeki",
+    "author": {
+      "@type": "Person",
+      "name": "Cheeki"
+    },
+    "potentialAction": {
+      "@type": "SearchAction",
+      "target": "{search_term_string}",
+      "query-input": "required name=search_term_string"
+    }
+  }
+  </script>
   <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
