--- a/guides/mod05-dollchan.html
+++ b/guides/mod05-dollchan.html
@@ -14,7 +14,7 @@
     <!-- Installation Guide -->
     <h2 class="text-xl font-semibold mb-2">Installation Guide</h2>
     <ul class="list-disc list-inside text-gray-300 mb-6 space-y-1">
-      <li>Requires Microsoft Visual C++ 2017, DirectX and OpenAL libraries like many old-school mods.</li>
+      <li>Requires Microsoft Visual C++ 2017, DirectX and OpenAL like many old-school mods.</li>
       <li>Extract Archive, move game folder to the root of your drive.</li>
       <li>Launch the mod using "Dollchan.exe".</li>
       <li>(Optional) Switch game engine in "JSGME.exe" - Anomaly is recommended.</li>
@@ -27,7 +27,7 @@
     <h2 class="text-xl font-semibold mb-2">Links</h2>
     <p class="text-gray-300 mb-1">
       Official Page: 
-      <a href="https://vk.com/dollchanmod" target="_blank" class="text-blue-400 hover:underline">Infos & Donations</a>
+      <a href="https://vk.com/dollchanmod" target="_blank" class="text-blue-400 hover:underline">VK Infos & Donations</a>
     </p>
     <p class="text-gray-300 mb-1">
       Ap-pro Original Page: 
@@ -54,3 +54,4 @@
   </div>
 </body>
 </html>
+
