--- a/guides/mod06-legendreturns.html
+++ b/guides/mod06-legendreturns.html
@@ -18,6 +18,7 @@
       <li>Extract Archive, move game folder to the root of your drive.</li>
       <li>Launch the mod using "Launch Legend Returns.bat".</li>
       <li>(Optional) On first launch, reset weather & lighting settings to default.</li>
+      <li>(Optional) Open console with ~ and use "cam_inert 0.001" to fix headbob.</li>
     </ul>
     <hr class="border-gray-600 mb-6">
 
@@ -89,3 +90,4 @@
   </div>
 </body>
 </html>
+
