--- a/guides/mod06-legendreturns.html
+++ b/guides/mod06-legendreturns.html
@@ -74,7 +74,7 @@
       <li>Vadim Drakoshin (Lost Path) for technical assistance</li>
       <li>gridgt for fixing interface textures</li>
       <li>av661194 for numerous CoC 1.4 fixes</li>
-      <li>Max Frolov (mopsm), Artyom "Shev" Shevchenko, Ivan "vangut" — development participants</li>
+      <li>Max Frolov (mopsm), Artyom "Shev" Shevchenko, Ivan "vangut" - development participants</li>
     </ul>
 
     <h3 class="font-semibold text-gray-200 mb-1">Financial Support</h3>
@@ -90,4 +90,5 @@
   </div>
 </body>
 </html>
+
 
