--- a/index.html
+++ b/index.html
@@ -157,6 +157,10 @@
       <input id="search-input" type="text" aria-label="Search mods" placeholder="Search mods..." class="flex-1 min-w-[150px] px-2 py-1 text-sm rounded bg-gray-800 text-white border border-gray-700 focus:outline-none focus:ring-2 focus:ring-yellow-500" />
     </div>
 
+    <!-- Grid layout: Currently set to 4 cards max per row (minmax(300px,1fr)) -->
+    <!-- To change to 3 cards max per row: change minmax(300px,1fr) to minmax(400px,1fr) -->
+    <!-- To change to 5 cards max per row: change minmax(300px,1fr) to minmax(240px,1fr) -->
+    <!-- To change to 2 cards max per row: change minmax(300px,1fr) to minmax(600px,1fr) -->
     <div id="mod-list" class="grid gap-4 grid-cols-[repeat(auto-fill,minmax(300px,1fr))]"></div>
 
     <footer class="mt-8 text-center text-sm text-gray-500">
