--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
             Contact me
           </button>
         </div>
-        <button id="important-files-link" aria-label="Important files you should install" class="bg-blue-600 hover:bg-blue-700 text-white text-xs font-medium py-0.5 px-2 rounded w-full text-center">
+        <button id="important-files-link" aria-label="Important files you should install" class="bg-yellow-500 hover:bg-yellow-600 text-black text-xs font-medium py-0.5 px-2 rounded w-full text-center">
           Important files you should install
         </button>
       </div>
