--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
     <p class="text-gray-300 text-sm mb-6">
       A non-exhaustive archive of game modifications for the S.T.A.L.K.E.R. game franchise, mainly story-focused mods I reviewed on the <a href="https://linktr.ee/cheekibreekii" target="_blank" class="text-white underline">YouTube Channel</a>.
       Everything listed here is for ease-of-access and posterity only. Consolidating files that tend to be scattered accross multiple websites, hosting services, with some unfortunately lost already. 
-      All credits go to the Authors of these mods. <a href="#" id="install-files-link" class="text-white underline cursor-pointer">Important files to Install</a>.
+      All credits go to the Authors of these mods - <a href="#" id="install-files-link" class="text-white underline cursor-pointer">important files to install</a> before you get started.
     </p>
 
     <div class="flex flex-wrap items-center gap-2 mb-4">
@@ -188,39 +188,46 @@
     <div class="bg-gray-900 rounded-lg max-w-3xl w-full max-h-[90vh] overflow-auto relative p-6">
       <button id="install-files-close" aria-label="Close install files popup" class="absolute top-4 right-4 text-gray-400 hover:text-white text-xl font-bold">&times;</button>
       <div id="install-files-content" class="text-gray-200">
-        <h3 class="text-2xl font-bold text-white mb-4">Important Files to Install</h3>
+        <h3 class="text-2xl font-bold text-white mb-4">Essential Files</h3>
         <div class="space-y-4">
           <p class="text-sm text-gray-300 mb-6">
-            Essential files and tools needed for S.T.A.L.K.E.R. modding. These are commonly required dependencies and utilities.
+            A lot of old-school mods need some of these files to function. I recommend installing everything once and not thinking about it anymore.
           </p>
           
-          <!-- Placeholder content - you can edit this section -->
-          <div class="bg-gray-800 rounded-lg p-4 mb-4">
-            <h4 class="text-lg font-semibold text-yellow-400 mb-2">DirectX Runtime</h4>
-            <p class="text-sm text-gray-300 mb-2">Required for most S.T.A.L.K.E.R. mods to run properly.</p>
-            <a href="#" class="text-blue-400 hover:underline text-sm">Download DirectX Runtime</a>
-          </div>
-
-          <div class="bg-gray-800 rounded-lg p-4 mb-4">
-            <h4 class="text-lg font-semibold text-yellow-400 mb-2">Visual C++ Redistributables</h4>
-            <p class="text-sm text-gray-300 mb-2">Essential runtime libraries for many mod executables.</p>
-            <a href="#" class="text-blue-400 hover:underline text-sm">Download VC++ Redistributables</a>
-          </div>
-
           <div class="bg-gray-800 rounded-lg p-4 mb-4">
             <h4 class="text-lg font-semibold text-yellow-400 mb-2">7-Zip</h4>
-            <p class="text-sm text-gray-300 mb-2">Archive extraction tool for mod files.</p>
-            <a href="#" class="text-blue-400 hover:underline text-sm">Download 7-Zip</a>
+            <p class="text-sm text-gray-300 mb-2">Essential file archive tool to extract mod files and archives.</p>
+            <a href="https://www.7-zip.org/" target="_blank" class="text-blue-400 hover:underline text-sm">Download 7-Zip</a>
+          </div>
+
+          <div class="bg-gray-800 rounded-lg p-4 mb-4">
+            <h4 class="text-lg font-semibold text-yellow-400 mb-2">OpenAL</h4>
+            <p class="text-sm text-gray-300 mb-2">Audio library required by many S.T.A.L.K.E.R. mods for proper sound functionality.</p>
+            <a href="https://www.openal.org/downloads/" target="_blank" class="text-blue-400 hover:underline text-sm">Download OpenAL</a>
+          </div>
+
+          <div class="bg-gray-800 rounded-lg p-4 mb-4">
+            <h4 class="text-lg font-semibold text-yellow-400 mb-2">DirectX End-User Runtimes 2010</h4>
+            <p class="text-sm text-gray-300 mb-2">Legacy DirectX runtime components needed for older S.T.A.L.K.E.R. mods and enhanced graphics.</p>
+            <a href="https://www.microsoft.com/en-us/download/details.aspx?id=8109" target="_blank" class="text-blue-400 hover:underline text-sm">Download DirectX Runtime 2010</a>
+          </div>
+
+          <div class="bg-gray-800 rounded-lg p-4 mb-4">
+            <h4 class="text-lg font-semibold text-yellow-400 mb-2">Microsoft .NET Framework 4.8</h4>
+            <p class="text-sm text-gray-300 mb-2">Runtime environment required by many mod installers and configuration tools.</p>
+            <a href="https://support.microsoft.com/en-us/topic/microsoft-net-framework-4-8-offline-installer-for-windows-9d23f658-3b97-68ab-d013-aa3c3e7495e0" target="_blank" class="text-blue-400 hover:underline text-sm">Download .NET Framework 4.8</a>
+          </div>
+
+          <div class="bg-gray-800 rounded-lg p-4 mb-4">
+            <h4 class="text-lg font-semibold text-yellow-400 mb-2">Visual C++ Redistributable 2013 x86</h4>
+            <p class="text-sm text-gray-300 mb-2">Essential runtime libraries for older 32-bit mod executables and tools.</p>
+            <a href="https://www.microsoft.com/en-us/download/details.aspx?id=40784" target="_blank" class="text-blue-400 hover:underline text-sm">Download VC++ 2013 x86</a>
           </div>
 
           <div class="bg-gray-800 rounded-lg p-4">
-            <h4 class="text-lg font-semibold text-yellow-400 mb-2">Installation Tips</h4>
-            <ul class="text-sm text-gray-300 space-y-1 list-disc list-inside">
-              <li>Always backup your save files before installing mods</li>
-              <li>Read installation instructions carefully</li>
-              <li>Install mods on a clean game installation when possible</li>
-              <li>Check mod compatibility before installation</li>
-            </ul>
+            <h4 class="text-lg font-semibold text-yellow-400 mb-2">Visual C++ Redistributable 2015+</h4>
+            <p class="text-sm text-gray-300 mb-2">Latest Visual C++ runtime libraries for newer mods and enhanced features.</p>
+            <a href="https://learn.microsoft.com/en-us/cpp/windows/latest-supported-vc-redist?view=msvc-170" target="_blank" class="text-blue-400 hover:underline text-sm">Download VC++ 2015+ Latest</a>
           </div>
         </div>
       </div>
