--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
     <p class="text-gray-300 text-sm mb-6">
       A non-exhaustive archive of game modifications for the S.T.A.L.K.E.R. game franchise, mainly story-focused mods I reviewed on the <a href="https://linktr.ee/cheekibreekii" target="_blank" class="text-white underline">YouTube Channel</a>.
       Everything listed here is for ease-of-access and posterity only. Consolidating files that tend to be scattered accross multiple websites, hosting services, with some unfortunately lost already. 
-      All credits go to the Authors of these mods - <a href="#" id="install-files-link" class="text-white underline cursor-pointer">important files to install</a> before you get started.
+      All credits go to the Authors of these mods - <a href="#" id="install-files-link" class="text-white underline cursor-pointer">important files to install before you get started.</a>
     </p>
 
     <div class="flex flex-wrap items-center gap-2 mb-4">
@@ -195,38 +195,50 @@
           </p>
           
           <div class="bg-gray-800 rounded-lg p-4 mb-4">
-            <h4 class="text-lg font-semibold text-yellow-400 mb-2">7-Zip</h4>
-            <p class="text-sm text-gray-300 mb-2">Essential file archive tool to extract mod files and archives.</p>
+            <div class="flex items-center gap-3 mb-2">
+              <h4 class="text-lg font-bold text-yellow-400 flex-shrink-0">7-Zip</h4>
+              <p class="text-sm text-gray-300">Essential file archive tool to extract mod files and archives.</p>
+            </div>
             <a href="https://www.7-zip.org/" target="_blank" class="text-blue-400 hover:underline text-sm">Download 7-Zip</a>
           </div>
 
           <div class="bg-gray-800 rounded-lg p-4 mb-4">
-            <h4 class="text-lg font-semibold text-yellow-400 mb-2">OpenAL</h4>
-            <p class="text-sm text-gray-300 mb-2">Audio library required by many S.T.A.L.K.E.R. mods for proper sound functionality.</p>
+            <div class="flex items-center gap-3 mb-2">
+              <h4 class="text-lg font-bold text-yellow-400 flex-shrink-0">OpenAL</h4>
+              <p class="text-sm text-gray-300">Audio library required by many S.T.A.L.K.E.R. mods for proper sound functionality.</p>
+            </div>
             <a href="https://www.openal.org/downloads/" target="_blank" class="text-blue-400 hover:underline text-sm">Download OpenAL</a>
           </div>
 
           <div class="bg-gray-800 rounded-lg p-4 mb-4">
-            <h4 class="text-lg font-semibold text-yellow-400 mb-2">DirectX End-User Runtimes 2010</h4>
-            <p class="text-sm text-gray-300 mb-2">Legacy DirectX runtime components needed for older S.T.A.L.K.E.R. mods and enhanced graphics.</p>
+            <div class="flex items-center gap-3 mb-2">
+              <h4 class="text-lg font-bold text-yellow-400 flex-shrink-0">DirectX End-User Runtimes 2010</h4>
+              <p class="text-sm text-gray-300">Legacy DirectX runtime components needed for older S.T.A.L.K.E.R. mods and enhanced graphics.</p>
+            </div>
             <a href="https://www.microsoft.com/en-us/download/details.aspx?id=8109" target="_blank" class="text-blue-400 hover:underline text-sm">Download DirectX Runtime 2010</a>
           </div>
 
           <div class="bg-gray-800 rounded-lg p-4 mb-4">
-            <h4 class="text-lg font-semibold text-yellow-400 mb-2">Microsoft .NET Framework 4.8</h4>
-            <p class="text-sm text-gray-300 mb-2">Runtime environment required by many mod installers and configuration tools.</p>
+            <div class="flex items-center gap-3 mb-2">
+              <h4 class="text-lg font-bold text-yellow-400 flex-shrink-0">Microsoft .NET Framework 4.8</h4>
+              <p class="text-sm text-gray-300">Runtime environment required by many mod installers and configuration tools.</p>
+            </div>
             <a href="https://support.microsoft.com/en-us/topic/microsoft-net-framework-4-8-offline-installer-for-windows-9d23f658-3b97-68ab-d013-aa3c3e7495e0" target="_blank" class="text-blue-400 hover:underline text-sm">Download .NET Framework 4.8</a>
           </div>
 
           <div class="bg-gray-800 rounded-lg p-4 mb-4">
-            <h4 class="text-lg font-semibold text-yellow-400 mb-2">Visual C++ Redistributable 2013 x86</h4>
-            <p class="text-sm text-gray-300 mb-2">Essential runtime libraries for older 32-bit mod executables and tools.</p>
+            <div class="flex items-center gap-3 mb-2">
+              <h4 class="text-lg font-bold text-yellow-400 flex-shrink-0">Visual C++ Redistributable 2013 x86</h4>
+              <p class="text-sm text-gray-300">Essential runtime libraries for older 32-bit mod executables and tools.</p>
+            </div>
             <a href="https://www.microsoft.com/en-us/download/details.aspx?id=40784" target="_blank" class="text-blue-400 hover:underline text-sm">Download VC++ 2013 x86</a>
           </div>
 
           <div class="bg-gray-800 rounded-lg p-4">
-            <h4 class="text-lg font-semibold text-yellow-400 mb-2">Visual C++ Redistributable 2015+</h4>
-            <p class="text-sm text-gray-300 mb-2">Latest Visual C++ runtime libraries for newer mods and enhanced features.</p>
+            <div class="flex items-center gap-3 mb-2">
+              <h4 class="text-lg font-bold text-yellow-400 flex-shrink-0">Visual C++ Redistributable 2015+</h4>
+              <p class="text-sm text-gray-300">Latest Visual C++ runtime libraries for newer mods and enhanced features.</p>
+            </div>
             <a href="https://learn.microsoft.com/en-us/cpp/windows/latest-supported-vc-redist?view=msvc-170" target="_blank" class="text-blue-400 hover:underline text-sm">Download VC++ 2015+ Latest</a>
           </div>
         </div>
